# foodgram-project-react

./: .env.example  .gitignore  README.md
.github/workflows/: main.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/api/: apps.py  filters.py  urls.py  validators.py
backend/api/serializers/: compact_recipe_serializers.py  recipe_serializers.py  users_serializers.py
backend/api/views/: recipes_views.py  users_views.py
backend/backend/: settings.py
backend/core/: apps.py  field_mixins.py  mixins.py  pagination.py  permissions.py  serializers.py  signals.py  utils.py  validators.py
backend/core/management/commands/: csv_import.py
backend/obsceneLang/: admin.py  apps.py  models.py  utils.py  validators.py
backend/obsceneLang/migrations/: 0001_initial.py
backend/recipes/: admin.py  apps.py  models.py
backend/recipes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_favouritelist_options_and_more.py
backend/static/data/: tags.csv
backend/users/: admin.py  apps.py  models.py
backend/users/migrations/: 0001_initial.py
infra/: docker-compose.production.yml  docker-compose.yml  nginx.conf
