[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for foodgram service"
authors = ["Кирюшин Виталий <kiryuschin.vitalij@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
djangorestframework = "^3.14.0"
django-filter = "^23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
